fixed overflow issue

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -84,3 +84,19 @@
 .no-scroll {
 	overflow: hidden;
 }
+
+::-webkit-scrollbar {
+	@apply w-2;
+	@apply h-2;
+}
+
+::-webkit-scrollbar-track {
+	@apply !bg-transparent;
+}
+::-webkit-scrollbar-thumb {
+	@apply rounded-xl !bg-border;
+}
+
+::-webkit-scrollbar-corner {
+	background: rgba(0, 0, 0, 0);
+}
